# VanceSenderR

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml  rust-release.yml
src/: app_meta.rs  config.rs  error.rs  main.rs  state.rs
src/api/: ai.rs  mod.rs  presets.rs  sender.rs  settings.rs  stats.rs
src/core/: ai_client.rs  ai_history.rs  history.rs  mod.rs  network.rs  notifications.rs  port_guard.rs  presets.rs  public_config.rs  sender.rs  stats.rs  update_checker.rs
src/desktop/: mod.rs  quick_overlay.rs  status_overlay.rs  tray.rs
src/gui/: mod.rs  sidebar.rs  theme.rs  titlebar.rs
src/gui/panels/: ai_generate.rs  home.rs  mod.rs  presets.rs  quick_send.rs  send.rs  settings.rs
src/gui/widgets/: mod.rs  preset_card.rs  progress.rs  tag_filter.rs  text_list.rs
