[package]
name = "vancesender"
version = "2.0.0"
edition = "2021"
description = "VanceSender — FiveM /me /do text sender with AI generation"
default-run = "vancesender"

[[bin]]
name = "vancesender"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = { version = "0.31", features = ["image"] }
egui-notify = "0.17"

# HTTP Server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Core utilities
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
tokio-stream = "0.1"
regex = "1"
thiserror = "2"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hostname = "0.4"
url = "2"
open = "5"

# Desktop integration
tray-icon = "0.19"
muda = "0.16"
image = { version = "0.25", default-features = false, features = ["ico"] }

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_DataExchange",
] }
clipboard-win = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
